# ChangeLog for games-fps/bloodfrontier
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Feb 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
  bloodfrontier-0.8_beta_rc1.ebuild:
  RDEPEND assigned

  10 Feb 2009; Michael Mair-Keimberger (d3vion) <miki3@gmx.net>
  +bloodfrontier-0.8_beta_rc1.ebuild, +files/bloodfrontier.png,
  +files/wrapper, +metadata.xml:
  New ebuild for bug 257819
