@@ -1,6 +1,5 @@
 AUX bloodfrontier.png 3883 RMD160 1c0d9293deab3414442cbedda17ceab874e6e2e9 SHA1 b43e64a1301956c91f6d5e4507aea961d5efe764 SHA256 37b404b271dfd758b903a8b5ec7764dba71d685964cbd48fdc224632ef63f460
-AUX wrapper 161 RMD160 7d68ed6c85de463ab8f63905258524e012bf71b0 SHA1 debf50c04e6b608e5ce97e521d37decd3824720f SHA256 a19e0dda6d4f1e39e780aaba019bd2d010eeecec927e72774585cb3f66decef2
 DIST bloodfrontier-B1-RC1-linux.tar.bz2 252791862 RMD160 1c57ce644348c1981a1f85a4b78307d69cc1a309 SHA1 8ccca329de358a58e11a2754c188db8c73bc64ff SHA256 22bb3a915b5640f119f2b81aa355672fc51b653dd79354acf26eedafe6ba8109
-EBUILD bloodfrontier-0.8_beta_rc1.ebuild 1559 RMD160 efe408e790da693b4fa30b39c31a20fa49e24d4d SHA1 60c2a5602b1325bdd16ca8ccbcaa9b11008f137d SHA256 aa27511fed8d83536c2af371978cdb2f5ed701300725d89c04d1ba3355c3766b
-MISC ChangeLog 433 RMD160 48262c31ae6800eec78878a979f438fbe5422805 SHA1 dc07a4d3a26cdb70333a318815b538b1e311a717 SHA256 d07af890fec1a69598a8f13a424137654e003ae217c16de7052425a0341d09c8
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+EBUILD bloodfrontier-0.8_beta_rc1-r1.ebuild 1300 RMD160 5d2fad95a49644cb995d6675ba6944f20dfbeecd SHA1 e4d160811fa7d7c1826ca0f171f0a8306fa0c625 SHA256 226307549c226747a8a487b4732544f7a2c356d522385429e63d12cd1d73ed3d
+MISC ChangeLog 645 RMD160 1325776f4eb902d35d0d379f66bd221ebca3817f SHA1 2474f048521e3a49cbf64ef6fae16c9066175a9c SHA256 ea8b6568da46a4c1fca695de137ab88e8f1633676662436981113f6d7db5dc91
+MISC metadata.xml 242 RMD160 2e15033dc25ed773c6eeb373cb5d3eab822e0dd8 SHA1 81d4f8d084e15ebed06b16aa914b9643003391eb SHA256 a14ce2fe27887d1ccae91d97af83d91ac69aa2fe3b9361c097612cb80a607ace
